fix release type
